--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -801,11 +801,11 @@
     "# 5) for average purchase per user, get number of users by age group from \n",
     "#    dataframe created in previous section (players_by_age_group_df) thru a merge, and\n",
     "# 6) drop unneeded columns now calculation of last variable is over.\n",
-    "purchases_by_age_df = df[['Age', 'Price']]\n",
-    "purchases_by_age_df.loc[:, 'Age Group'] = pd.cut(purchases_by_age_df.loc[:, 'Age'],\n",
-    "                                                 [0, 10, 15, 20, 25, 30, 35, 40, 200],\n",
-    "                                                 labels = ['0-10', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40+'],\n",
-    "                                                 right=False)\n",
+    "purchases_by_age_df = df[['Age', 'Price']].copy()\n",
+    "purchases_by_age_df['Age Group'] = pd.cut(purchases_by_age_df['Age'],\n",
+    "                                          [0, 10, 15, 20, 25, 30, 35, 40, 200],\n",
+    "                                          labels = ['0-10', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40+'],\n",
+    "                                          right=False)\n",
     "purchases_by_age_df.set_index('Age Group', inplace=True)\n",
     "purchases_by_age_df.drop(columns=['Age'], inplace=True)\n",
     "purchases_by_age_df.index.names = ['Age']\n",
