--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "      <td>Male</td>\n",
        "      <td>108</td>\n",
        "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>$3.53</td>\n",
+       "      <td>3.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -63,7 +63,7 @@
        "      <td>Male</td>\n",
        "      <td>143</td>\n",
        "      <td>Frenzied Scimitar</td>\n",
-       "      <td>$1.56</td>\n",
+       "      <td>1.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -73,7 +73,7 @@
        "      <td>Male</td>\n",
        "      <td>92</td>\n",
        "      <td>Final Critic</td>\n",
-       "      <td>$4.88</td>\n",
+       "      <td>4.88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -83,7 +83,7 @@
        "      <td>Male</td>\n",
        "      <td>100</td>\n",
        "      <td>Blindscythe</td>\n",
-       "      <td>$3.27</td>\n",
+       "      <td>3.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -93,7 +93,7 @@
        "      <td>Male</td>\n",
        "      <td>131</td>\n",
        "      <td>Fury</td>\n",
-       "      <td>$1.44</td>\n",
+       "      <td>1.44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -108,14 +108,14 @@
        "4            4      Iskosia90   23   Male      131   \n",
        "\n",
        "                                   Item Name  Price  \n",
-       "0  Extraction, Quickblade Of Trembling Hands  $3.53  \n",
-       "1                          Frenzied Scimitar  $1.56  \n",
-       "2                               Final Critic  $4.88  \n",
-       "3                                Blindscythe  $3.27  \n",
-       "4                                       Fury  $1.44  "
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "0            576"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "0                     183          $3.05                  780      $2,379.77"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "Other / Non-Disclosed           11                  1.91%"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "Other / Non-Disclosed                $50.19                          $4.56  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "40+             12                  2.08%"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,32 +638,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/family/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:362: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/Users/family/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n",
-      "/Users/family/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:3940: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  errors=errors)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -783,7 +760,7 @@
        "40+                            $3.19  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +778,7 @@
     "# 5) for average purchase per user, get number of users by age group from \n",
     "#    dataframe created in previous section (players_by_age_group_df) thru a merge, and\n",
     "# 6) drop unneeded columns now calculation of last variable is over.\n",
-    "purchases_by_age_df = df[['Age', 'Price']].copy()\n",
+    "purchases_by_age_df = df.loc[:, ['Age', 'Price']]\n",
     "purchases_by_age_df['Age Group'] = pd.cut(purchases_by_age_df['Age'],\n",
     "                                          [0, 10, 15, 20, 25, 30, 35, 40, 200],\n",
     "                                          labels = ['0-10', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40+'],\n",
@@ -836,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +893,7 @@
        "Iskadarya95               3                   $4.37                $13.10"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1036,7 @@
        "19      Pursuit, Cudgel of Necromancy                                $8.16  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1179,7 @@
        "103     Singed Scalpel                                              $34.80  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,9 +1232,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:PythonData] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-PythonData-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1269,7 +1246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   },
   "nteract": {
    "version": "0.2.0"
