--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heroes of Pymoli\n",
+    "# Option 1: Heroes of Pymoli\n",
     "\n",
     "---"
    ]
@@ -1232,9 +1232,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1246,7 +1246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   },
   "nteract": {
    "version": "0.2.0"
